--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,10 +1,12 @@
-
 version: 2.1
+
+orbs:
+  android: circleci/android@0.2.0
 
 executors:
   android-executor:
     docker:
-      - image: circleci/android:api-26-node  # Use the appropriate Docker image for your project
+      - image: circleci/android:api-30-node  # Use the appropriate Docker image for your project
     working_directory: ~/project
     environment:
       GRADLE_OPTS: "-Dorg.gradle.daemon=false -Dorg.gradle.jvmargs='-Xmx2048m -XX:+HeapDumpOnOutOfMemoryError'"
