--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,5 +1,6 @@
 version: 2.1
 
+
 orbs:
   android: circleci/android@0.2.0
 
@@ -21,6 +22,8 @@ jobs:
       - run:
           name: Install Dependencies
           command: |
+            curl https://packages.cloud.google.com/apt/doc/apt-key.gpg
+            sudo apt-key add
             sudo apt-get update
             sudo apt-get install ruby ruby-dev build-essential -y
             gem install bundler:2.3.26  # Install Bundler
