--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,7 +23,7 @@ jobs:
           name: Install Dependencies
           command: |
             curl https://packages.cloud.google.com/apt/doc/apt-key.gpg
-            sudo apt-key add
+            sudo apt-key --keyring /usr/share/keyrings/cloud.google.gpg add -
             sudo apt-get update
             apt-get install ca-certificates
             sudo apt-get install ruby ruby-dev build-essential -y
