--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,9 +23,9 @@ jobs:
           name: Install Dependencies
           command: |
             curl https://packages.cloud.google.com/apt/doc/apt-key.gpg
-            sudo apt-key --keyring /usr/share/keyrings/cloud.google.gpg add -
+            sudo apt-key add
             sudo apt-get update
-            apt-get install ca-certificates
+            sudo apt-get install --reinstall ca-certificates
             sudo apt-get install ruby ruby-dev build-essential -y
             gem install bundler:2.3.26  # Install Bundler
             bundle install             # Install gems including Fastlane
