--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,10 +22,10 @@ jobs:
       - run:
           name: Install Dependencies
           command: |
-            curl https://packages.cloud.google.com/apt/doc/apt-key.gpg
-            sudo apt-key add
+            wget  https://packages.cloud.google.com/apt/doc/apt-key.gpg
+            sudo apt-key add 
             sudo apt-get update
-            sudo apt-get install --reinstall ca-certificates
+            apt-get install ca-certificates
             sudo apt-get install ruby ruby-dev build-essential -y
             gem install bundler:2.3.26  # Install Bundler
             bundle install             # Install gems including Fastlane
