--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,8 +22,8 @@ jobs:
 
       - run:
           name: Install Dependencies
-          command: |
-            wget  https://packages.cloud.google.com/apt/doc/apt-key.gpg
+          command: |  
+            curl -fsSL <https://packages.cloud.google.com/apt/doc/apt-key.gpg> -o /usr/share/keyrings/<apt-key>.gpg
             sudo apt-key add apt-key
             sudo apt-get update
             apt-get install ca-certificates
