--- a/gradle.properties
+++ b/gradle.properties
@@ -23,4 +23,4 @@ kotlin.code.style=official
 android.nonTransitiveRClass=true
 
 
-org.gradle.java.home= C:\\Program Files\\Java\\jdk-17
+org.gradle.java.home=C\:\\Program Files\\Java\\jdk-17
