--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,4 @@
-version: 2
+version: 2.1
 orbs:
   android: circleci/android@1.0
 jobs:
@@ -6,8 +6,8 @@ jobs:
     working_directory: ~/code
     docker:
       #cicleci image for JAVA version 1.8
-      #     - image: circleci/android:api-25-alpha
-      - image: ccistaging/android:api-30
+      - image: circleci/android:api-25-alpha
+#      - image: ccistaging/android:api-30
     environment:
       JVM_OPTS: -Xmx3200m
     steps:
